[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/Proyectile.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/player/ram.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.9304, 9.61826 )

[sub_resource type="Animation" id=2]
resource_name = "ramroll"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="PlayerProyectile" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.0530193, 0.200449 )
rotation = 1.74846e-07
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 2 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AnimationRam" type="AnimationPlayer" parent="."]
anims/ramroll = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Proyectile_body_entered"]
